fix : align-items 변경

--- a/src/styles/Travel.module.css
+++ b/src/styles/Travel.module.css
@@ -355,7 +355,7 @@
 
 .label {
     display: flex;
-    align-items: flex-start;
+    align-items: baseline;
     gap: 8px;
 }
 
